--- a/app/assets/stylesheets/nutrition.css
+++ b/app/assets/stylesheets/nutrition.css
@@ -25,6 +25,7 @@
 
 .nutrition-label header {
   text-align: left;
+  margin-bottom: 0;
 }
 
 .nutrition-label header::after {
